fixed jumping message box

--- a/Capstone/dice.css
+++ b/Capstone/dice.css
@@ -191,8 +191,13 @@ button{
     
 }
 
+.messageBox {
+    height: 140px;
+}
+
 .messageBox h2 {
     padding-bottom: .5rem;
+    
 }
 
 #gameBoard img {
